--- a/src/components/PostBody.astro
+++ b/src/components/PostBody.astro
@@ -1,5 +1,5 @@
 ---
-import { Block } from '../lib/interfaces.ts'
+import type { Block } from '../lib/interfaces.ts'
 import NotionBlocks from './NotionBlocks.astro'
 
 export interface Props {
@@ -7,14 +7,21 @@ export interface Props {
 }
 
 const { blocks } = Astro.props
+const headings = blocks.filter((b: Block) =>
+  ['heading_1', 'heading_2', 'heading_3'].includes(b.Type)
+)
 ---
 
 <div class="post-body">
-  <NotionBlocks blocks={blocks} isRoot={true} />
+  <NotionBlocks blocks={blocks} isRoot={true} level={1} headings={headings} />
 </div>
 
 <style>
   .post-body {
     padding: 0.5rem 0;
+    width: 100%;
+  }
+  .post-body :global(.table-of-contents) {
+    width: 100%;
   }
 </style>
