--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -115,13 +115,13 @@ if (post.FeaturedImage && post.FeaturedImage.Url) {
 
   <div slot="aside" class="aside">
     <BlogPostsLink
-      heading="同じカテゴリーの記事"
+      heading="Posts in the same category"
       posts={postsHavingSameTag.filter(
         (p: interfaces.Post) => p.Slug !== post.Slug
       )}
     />
-    <BlogPostsLink heading="おすすめの記事" posts={rankedPosts} />
-    <BlogPostsLink heading="最新の記事" posts={recentPosts} />
-    <BlogTagsLink heading="カテゴリー" tags={tags} />
+    <BlogPostsLink heading="Recommended" posts={rankedPosts} />
+    <BlogPostsLink heading="Latest posts" posts={recentPosts} />
+    <BlogTagsLink heading="Categories" tags={tags} />
   </div>
 </Layout>
