--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -53,6 +53,7 @@ if (database.Icon && 'Type' in database.Icon && 'Url' in database.Icon) {
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;500;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <meta name="description" content={siteDescription} />
     <link rel="canonical" href={siteURL} />
     <meta property="og:url" content={siteURL} />
