Update HeaderMenu component to enhance social link accessibility
- Added target="_blank" and rel="noopener noreferrer" attributes to social media links for improved security and user experience.
- Ensured that external links open in a new tab while maintaining accessibility standards.

--- a/src/components/HeaderMenu.astro
+++ b/src/components/HeaderMenu.astro
@@ -10,13 +10,13 @@ import { getNavLink } from '../lib/blog-helpers.ts'
     </button>
     <nav class="menu-items">
       <div class="social-links">
-        <a href="https://x.com/nemumusitocha" class="social-link" aria-label="Twitter">
+        <a href="https://x.com/nemumusitocha" class="social-link" aria-label="Twitter" target="_blank" rel="noopener noreferrer">
           <i class="fab fa-twitter"></i>
         </a>
-        <a href="https://www.youtube.com/@nemumusito" class="social-link" aria-label="YouTube">
+        <a href="https://www.youtube.com/@nemumusito" class="social-link" aria-label="YouTube" target="_blank" rel="noopener noreferrer">
           <i class="fab fa-youtube"></i>
         </a>
-        <a href="https://github.com/nemumusito" class="social-link" aria-label="GitHub">
+        <a href="https://github.com/nemumusito" class="social-link" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
           <i class="fab fa-github"></i>
         </a>
       </div>
